@@ -1014,9 +1014,6 @@ IF(USE_FFMPEG)
   IF(FFMPEG_FOUND)
     MESSAGE(STATUS "FFMPEG found")
     SET(VISP_HAVE_FFMPEG  TRUE)  # for header vpConfig.h
-    IF(FFMPEG_WITH_DECODE_VIDEO2_FOUND)
-      SET(VISP_HAVE_FFMPEG_WITH_DECODE_VIDEO2 TRUE)  # for header vpConfig.h
-    ENDIF(FFMPEG_WITH_DECODE_VIDEO2_FOUND)
     SET(VISP_HAVE_FFMPEG_FOUND "yes")  # for ViSP-third-party.txt
     LIST(APPEND VISP_EXTERN_INCLUDE_DIR ${FFMPEG_INCLUDE_DIRS})
     LIST(APPEND VISP_EXTERN_LIBS ${FFMPEG_LIBRARIES})
