@@ -37,7 +37,6 @@
 # FFMPEG_FOUND - system has FFMPEG
 # FFMPEG_INCLUDE_DIRS - the FFMPEG include directory
 # FFMPEG_LIBRARIES - Link these to use FFMPEG
-# FFMPEG_WITH_DECODE_VIDEO2_FOUND - true if avcodec_decode_video2() is available
 #
 # Authors:
 # Fabien Spindler
@@ -184,43 +183,6 @@
     FIND_PACKAGE(BZip2 QUIET)
     # MESSAGE("BZIP2_FOUND: ${BZIP2_FOUND}")
   endif()
-
-  # Try to find if avcodec_decode_video2() is avalaible since 
-  # avcodec_decode_video() is deprecated. To do that we try to compile 
-  # a sample code
-  IF(FFMPEG_INCLUDE_DIR AND FFMPEG_INCLUDE_DIR_AVCODEC AND FFMPEG_AVCODEC_LIBRARY AND FFMPEG_AVUTIL_LIBRARY AND ZLIB_FOUND)
-  INCLUDE (CheckCXXSourceCompiles)
-
-    #MESSAGE("zlib ${ZLIB_LIBRARY}")
-    SET(CMAKE_REQUIRED_LIBRARIES ${FFMPEG_AVCODEC_LIBRARY} ${FFMPEG_AVUTIL_LIBRARY})
-    if(FFMPEG_AVCORE_LIBRARY)
-      LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${FFMPEG_AVCORE_LIBRARY})
-    endif()
-    LIST(APPEND CMAKE_REQUIRED_LIBRARIES ${ZLIB_LIBRARY})
-    SET(CMAKE_REQUIRED_INCLUDES ${FFMPEG_INCLUDE_DIR} ${FFMPEG_INCLUDE_DIR_AVCODEC})
-    SET(CMAKE_REQUIRED_DEFINITIONS "-D__STDC_CONSTANT_MACROS")
-    CHECK_CXX_SOURCE_COMPILES("
-  #define __STDC_CONSTANT_MACROS
-  extern \"C\"
-  {
-  #include <avcodec.h>
-  }
-
-  int main(){
-  AVCodecContext *avctx;
-  AVFrame *picture;
-  int *got_picture_ptr;
-  AVPacket *avpkt;
-  avcodec_decode_video2(avctx, picture, got_picture_ptr, avpkt);
-  return 0;
-  }" FFMPEG_WITH_DECODE_VIDEO2_FOUND) 
-
-  #MESSAGE("FFMPEG_WITH_DECODE_VIDEO2_FOUND: ${FFMPEG_WITH_DECODE_VIDEO2_FOUND}")
-
-  ELSE(FFMPEG_INCLUDE_DIR AND FFMPEG_INCLUDE_DIR_AVCODEC AND FFMPEG_AVCODEC_LIBRARY AND FFMPEG_AVUTIL_LIBRARY AND ZLIB_FOUND)
-    SET(FFMPEG_WITH_DECODE_VIDEO2_FOUND FALSE)
-  ENDIF(FFMPEG_INCLUDE_DIR AND FFMPEG_INCLUDE_DIR_AVCODEC AND FFMPEG_AVCODEC_LIBRARY AND FFMPEG_AVUTIL_LIBRARY AND ZLIB_FOUND)
-
 
 IF(FFMPEG_INCLUDE_DIR AND FFMPEG_INCLUDE_DIR_AVCODEC AND FFMPEG_INCLUDE_DIR_AVFORMAT AND FFMPEG_INCLUDE_DIR_AVUTIL AND FFMPEG_INCLUDE_DIR_SWSCALE AND FFMPEG_SWSCALE_LIBRARY AND FFMPEG_AVFORMAT_LIBRARY AND FFMPEG_AVCODEC_LIBRARY AND FFMPEG_AVUTIL_LIBRARY AND ZLIB_LIBRARY AND BZIP2_LIBRARIES)
   SET(FFMPEG_FOUND TRUE)
